--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "i18next": "^22.4.10",
     "on-change": "^4.0.2",
     "yup": "^1.0.0"
   }
